[gd_scene load_steps=17 format=3 uid="uid://bb0or7kpjh8en"]

[ext_resource type="Script" uid="uid://b58xts1ubn8l8" path="res://common/ui/mouse/mouse.gd" id="1_dw0il"]
[ext_resource type="Texture2D" uid="uid://fo3p7kykbycr" path="res://common/ui/mouse/default.png" id="2_s0akw"]
[ext_resource type="Shader" uid="uid://cu1c851n2s1dc" path="res://common/shaders/hold_mouse.gdshader" id="3_yn510"]
[ext_resource type="Texture2D" uid="uid://cnr8l1dhbkfde" path="res://mission/mouse/bar_red.png" id="6_dw0il"]
[ext_resource type="Script" uid="uid://6l83lmpxses8" path="res://common/ui/mouse/hit_bar.gd" id="6_pvdj5"]
[ext_resource type="Script" uid="uid://b2syofsgymc1s" path="res://common/ui/mouse/hit_box.gd" id="6_s0akw"]
[ext_resource type="Texture2D" uid="uid://b4wu8isahbcyt" path="res://mission/ui/combo_bar_container.png" id="7_qgvbs"]
[ext_resource type="Texture2D" uid="uid://dd4rjg0f42g74" path="res://mission/mouse/mouse.png" id="7_s0akw"]
[ext_resource type="Shader" uid="uid://b4ad3pys5nyjy" path="res://common/shaders/mission_progress_flipped.gdshader" id="9_qgvbs"]
[ext_resource type="Texture2D" uid="uid://j03tlh2snx1e" path="res://mission/ui/combo_bar.png" id="10_lfs7a"]
[ext_resource type="Shader" uid="uid://7k8808qqc0nc" path="res://common/shaders/remove_antialising.gdshader" id="11_lfs7a"]
[ext_resource type="FontFile" uid="uid://5jasf4bxnkqr" path="res://common/fonts/two pixels wide.ttf" id="12_hawfq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2adkn"]
shader = ExtResource("3_yn510")
shader_parameter/progress = 0.652
shader_parameter/radius = 0.5
shader_parameter/inner = 0.315
shader_parameter/centre = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mquvk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hawfq"]
shader = ExtResource("9_qgvbs")
shader_parameter/progress = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wd0f0"]
shader = ExtResource("11_lfs7a")
shader_parameter/colour = Color(0.180392, 0.133333, 0.184314, 1)

[node name="Mouse" type="Node2D"]
process_mode = 3
z_index = 10
script = ExtResource("1_dw0il")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 145
material = SubResource("ShaderMaterial_2adkn")
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
rotation = 4.71239
scale = Vector2(2, 2)
pivot_offset = Vector2(6, 6)

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("6_s0akw")

[node name="ColorRect" type="ColorRect" parent="HitBox"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.384314, 0.333333, 0.396078, 0.247059)

[node name="CollisionShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_mquvk")

[node name="HitBar" type="NinePatchRect" parent="HitBox"]
offset_left = -14.0
offset_top = -22.0
offset_right = -8.0
offset_bottom = -14.0
texture = ExtResource("6_dw0il")
region_rect = Rect2(0, 0, 5, 16)
patch_margin_left = 3
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 4
script = ExtResource("6_pvdj5")

[node name="Corners" type="Node2D" parent="HitBox"]

[node name="TopLeft" type="Sprite2D" parent="HitBox/Corners"]
position = Vector2(-11, -11)
texture = ExtResource("7_s0akw")
centered = false

[node name="BottomLeft" type="Sprite2D" parent="HitBox/Corners"]
position = Vector2(-11, 11)
rotation = -1.5708
texture = ExtResource("7_s0akw")
centered = false

[node name="BottomRight" type="Sprite2D" parent="HitBox/Corners"]
position = Vector2(11, 11)
texture = ExtResource("7_s0akw")
centered = false
offset = Vector2(-4, -4)
flip_h = true
flip_v = true

[node name="TopRight" type="Sprite2D" parent="HitBox/Corners"]
position = Vector2(11, -11)
rotation = -1.5708
texture = ExtResource("7_s0akw")
centered = false
offset = Vector2(-4, -4)
flip_h = true
flip_v = true

[node name="Combo" type="Node2D" parent="HitBox"]
position = Vector2(18, 0)

[node name="ComboBarContainer" type="Sprite2D" parent="HitBox/Combo"]
texture = ExtResource("7_qgvbs")

[node name="ComboBar" type="Sprite2D" parent="HitBox/Combo"]
material = SubResource("ShaderMaterial_hawfq")
texture = ExtResource("10_lfs7a")

[node name="ComboAmount" type="Label" parent="HitBox/Combo"]
material = SubResource("ShaderMaterial_wd0f0")
offset_left = 5.0
offset_top = -2.0
offset_right = 15.0
offset_bottom = 4.0
theme_override_colors/font_outline_color = Color(0.180392, 0.133333, 0.184314, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("12_hawfq")
theme_override_font_sizes/font_size = 6
text = "MAX"
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_s0akw")

[connection signal="body_entered" from="HitBox" to="HitBox" method="_on_body_entered"]
[connection signal="body_exited" from="HitBox" to="HitBox" method="_on_body_exited"]
[connection signal="input_event" from="HitBox" to="HitBox" method="_on_input_event"]
